# dongnefit-backend

./: .env.example  .gitignore  README.md  docker-compose.yaml  pyproject.toml
.serena/: project.yml
.serena/memories/: local-api-deletion-analysis.md
alembic/: env.py
alembic/versions/: 0d27d561ed02_drop_jimok_code_from_lots.py  0d60c1f1dbc8_.py  0d79360abab7_remove_raw_data_and_simplify_geometry.py  11b2e4e9e3fc_remove_blog_posts_table.py  1494dcb4fa70_공공데이터_db_개선_중복인덱스_제거_복합인덱스_추가_유니크제약_추가_.py  170a324e55de_.py  1a02c61ab5a0_convert_geometry_jsonb_to_postgis.py  1d756213b019_split_administrative_divisions_into_.py  253bae5c3109_optimize_public_data_tables_remove_.py  2e14c8b34c3a_add_pnu_lat_lng_to_reports.py  39ed7534c022_remove_collected_at_from_all_public_.py  3dde80897250_add_address_column_to_lots_and_populate_.py  3f0928469a5b_add_report_comments_and_comment_count.py  420b4459f7f3_drop_ownerships_jsonb_column_from_lots.py  42b7e2161ef4_rename_administrative_emds_code_to_emd_.py  43819b90c398_add_land_ownerships_table.py  43ee1074f345_drop_individual_house_prices_and_.py  452f12c5bdaa_merge_land_tables_into_lots.py  4e696ca65b61_.py  5ac682a04de1_add_address_drop_sigungu_real_estate.py  6240dc577ce3_add_real_estate_transaction_detail_.py  62c51e1157ae_.py  675a0788be23_.py  687da71a5c43_initial.py  6b002b37f1f7_add_building_register_models.py  6cdec6e97f6d_.py  86a0683a9010_split_real_estate_transactions_into_.py  922ba75f4289_drop_unused_columns_pnu_contract_area_.py  a84d805dc798_remove_updated_at_from_public_data_.py  af6aabc26309_drop_ancillary_lands_table.py  b467517efbf5_add_geometry_to_reports.py  b59b6388bfb4_drop_land_use_code_ownership_code_use_.py  b87c43462b62_drop_jibun_address_data_year_rename_.py  c9e7b1844a50_.py  ccb511713602_.py  d0e2ff40ce1d_.py  d85a35a9f086_.py  dd4575e35723_increase_dong_column_length_to_50.py  e92be96a0c8c_remove_pnu_foreign_keys_for_independent_.py  e9df4b14a87b_initial.py  (+2 more)
app/: __init__.py  config.py  database.py  main.py
app/api/: deps.py
app/api/v1/: __init__.py
app/api/v1/endpoints/: buildings.py  content.py  discussions.py  lots.py  map.py  neighborhoods.py  notifications.py  payments.py  predictions.py  properties.py  reports.py  talk.py  transactions.py  users.py
app/auth/: __init__.py  deps.py  oauth.py
app/core/agent/: __init__.py  agent.py  main.py  models.py  supervisor.py  talk_agent.py
app/core/agent/resources/: region_prompts.py
app/core/agent/sub_agents/: content_generator.py  data_classifier.py  data_collector.py  development_event_agent.py  intent_analyzer.py
app/core/agent/sub_agents/seo/: __init__.py  agent.py  models.py  scoring.py  tools.py  workflow.py
app/core/agent/tools/: __init__.py  convenience.py  geocoding.py  grocery.py  hospital.py  hospital_animal.py  lawd.py  park.py  river.py  rtms.py  school.py  store.py
app/core/langgraph/: __init__.py  workflow.py
app/core/repositories/: __init__.py  convenience.py  grocery.py  hospital.py  hospital_animal.py  lawd.py  park.py  river.py  rtms.py  school.py  vworld.py  xml.py
app/core/seo_agent/: __init__.py  agent.py  scoring.py  tools.py  workflow.py
app/core/tistory/: config.py  content_generator.py  data_processor.py  main.py  tistory_writer.py  user_input.py
app/crud/: base.py  discussion.py  neighborhood.py  notification.py  payment.py  prediction.py  public_data.py  report.py  user.py
app/models/: __init__.py  admin.py  administrative.py  base.py  blog.py  building.py  content.py  discussion.py  enums.py  file.py  land.py  land_ownership.py  lot.py  neighborhood.py  notification.py  payment.py  price.py  property.py  report.py  spatial.py  transaction.py  user.py
app/pipeline/: __init__.py  __main__.py  cli.py  db_manager.py  file_utils.py  loader.py  parsing.py  regions.py  registry.py
app/pipeline/clients/: __init__.py
app/pipeline/processors/: __init__.py  administrative_boundary.py  base.py  building_register.py  cadastral.py  gis_building_integrated.py  land_characteristic.py  land_forest.py  land_ownership.py  land_use_plan.py  official_land_price.py  real_estate_transaction.py  road_center_line.py  use_region_district.py  vworld_csv.py
app/pipeline/transaction_crawler/: __init__.py  __main__.py  crawler.py
app/schemas/: __init__.py  admin.py  administrative.py  base.py  blog.py  building.py  content.py  discussion.py  file.py  land.py  land_ownership.py  lot.py  map.py  neighborhood.py  notification.py  payment.py  prediction.py  price.py  public_data.py  report.py  spatial.py  transaction.py  user.py
app/scripts/: __init__.py  clear_data.py  seed_data.py  train_model.py
app/services/content/: __init__.py  generator.py  scraper.py
app/services/map/: __init__.py  service.py
app/services/prediction/: __init__.py  constants.py  csv_reader.py  features.py  service.py  training.py
app/utils/: pnu.py
docs/: SEO_AI_Agent.md  public_data_erd.md  tistory.md  uv.md
docs/agent/: README.md  execution.md  structure.md  sub_agents.md  tools.md  workflow.md
docs/data/: db_적재_시나리오.md  geometry-handling.md  public-data-erd.md  shp_전처리_흐름.md  개발공시지가와_표준지공시지가의_차이점.md  건축물대장의_구성과_사용처.md  공공데이터_용량_예측.md
pipeline/: __main__.py  cli.py  db_manager.py  file_utils.py  loader.py  regions.py  registry.py
pipeline/clients/: base.py
pipeline/processors/: administrative_boundary.py  apartment_price.py  base.py  building_register.py  cadastral.py  gis_building_integrated.py  individual_house_price.py  land_characteristic.py  land_forest.py  land_ownership.py  land_use_plan.py  official_land_price.py  real_estate_transaction.py  road_center_line.py  standard_land_price.py  use_region_district.py  vworld_csv.py
pipeline/transaction_crawler/: __main__.py  crawler.py
prompts/realestate_data/: prompt_defaults.yaml  system_prompt.txt
prompts/talk/: system_prompt.txt
tests/: __init__.py  test_content_gen_prompt.py  test_critique_loop.py  test_intent_analysis.py  test_search_expansion.py
