[project]
name = "dongnefit-backend"
version = "0.1.0"
description = "Real estate content generation backend with map services"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # Web Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",

    # Database
    "sqlalchemy>=2.0.36",
    "alembic>=1.14.0",
    "psycopg[binary]>=3.2.0",
    "asyncpg>=0.30.0",

    # Validation & Settings
    "pydantic[email]>=2.10.0",
    "pydantic-settings>=2.6.0",

    # AI & Content Generation
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.3.0",

    # Web Scraping
    "selenium>=4.27.0",
    "webdriver-manager>=4.0.0",

    # Image Generation
    "pillow>=11.0.0",
    "httpx>=0.28.0",

    # Utilities
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.18",
    "itsdangerous>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[tool.ruff]
target-version = "py313"
line-length = 100
fix = true
exclude = [
    "__pycache__",
    ".git",
    ".ruff_cache",
    ".venv",
    "CVS",
    "migrations",
    "tests",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle (PEP8 스타일)
    "F",    # pyflakes (버그 탐지)
    "I",    # isort (import 정렬)
    "N",    # pep8-naming (변수명 규칙)
    "W",    # pycodestyle warnings (경고)
    "B",    # flake8-bugbear (잠재적 버그 탐지)
    "C4",   # flake8-comprehensions (comprehension 규칙)
    "UP",   # pyupgrade (최신 문법 권장)
]
ignore = [
    "E501",  # 줄 길이 제한 무시 (Black 포매터와 충돌 방지)
    "F401",  # 사용되지 않은 임포트 무시
    "N801",  # 클래스 이름은 CapWords 규칙을 따름
    "N815",  # 클래스 범위에서는 대소문자 혼용 가능
    "N816",  # 전역 범위에서는 대소문자 혼용 가능
    "B008",  # Allow Depends() in function defaults (FastAPI pattern)
]

[tool.ruff.lint.pylint]
max-args = 10
max-locals = 15
max-returns = 6
max-branches = 12
max-statements = 50

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
